Fix layout of twitter button on small smartphones

--- a/css/styles.css
+++ b/css/styles.css
@@ -124,7 +124,7 @@ p.content {
 }
 
 #contact .btns {
-    margin: 40px;
+    margin: 40px 0;
 }
 
 footer .content {
